--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require-dev": {
         "composer/composer" : "*@dev",
+        "hostnet/phpcs-tool" : "1.*",
         "phpunit/phpunit" : "4.*"
     },
     "minimum-stability" : "stable",
