--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,10 @@
     "autoload-dev" : {
         "psr-4" : {
             "Hostnet\\Component\\AccessorGenerator\\" : "test/"
-        }
+        },
+        "files" : [
+            "test/annotation_loader.php"
+        ]
     },
     "extra" : {
         "class" : "Hostnet\\Component\\AccessorGenerator\\Plugin"
