exclude test in archive, removed composer.phar

--- a/composer.json
+++ b/composer.json
@@ -54,5 +54,8 @@
     },
     "extra" : {
         "class" : "Hostnet\\Component\\AccessorGenerator\\Plugin"
+    },
+    "archive": {
+        "exclude": [ "/test" ]
     }
 }
