--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "hostnet/phpcs-tool" : "2.*,>=2.0.11",
         "phpunit/phpunit" : "~4.3"
     },
+    "conflict" : {
+        "hostnet/entity-generator-plugin-lib" : "<1.5.0"
+    },
     "minimum-stability" : "stable",
     "repositories" : [{
             "type" : "composer",
