--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         "doctrine/common":      "~2.4",
         "doctrine/inflector":   "~1.0",
         "doctrine/orm":         "~2.4",
-        "symfony/filesystem":   "~2.5",
+        "symfony/filesystem":   "^3.0.2|~2.5",
         "twig/twig":            "~1.16"
     },
     "require-dev": {
-        "composer/composer":  "*@dev",
+        "composer/composer":  "*@alpha",
         "hostnet/phpcs-tool": "^3.0.0",
         "phpunit/phpunit":    "^5.1.0"
     },
