https for composer

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "repositories": [
         {
             "type": "composer",
-            "url":  "http://packagist.hostnetbv.nl"
+            "url":  "https://packagist.hostnetbv.nl"
         }
     ],
     "authors": [
