exclude test dir as we did everywhere, without trailing /

--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
     },
     "archive": {
         "exclude": [
-            "/test/",
+            "/test",
             "/.gitignore",
             "/phpunit.xml.dist",
             "/phpcs.xml.dist",
