--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         "twig/twig":            "~1.16"
     },
     "require-dev": {
-        "composer/composer":  "*@alpha",
+        "composer/composer":  "^1.0.0",
         "hostnet/phpcs-tool": "^4.0.1",
-        "phpunit/phpunit":    "^5.1.0"
+        "phpunit/phpunit":    "^5.3.0"
     },
     "conflict": {
         "hostnet/entity-generator-plugin-lib": "<1.5.0"
