--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ matrix:
         - php: 7.0
           env: deps=lowest
         - php: 7.1
-        - php: hhvm
+        - php: nightly
     allow_failures:
-        - php: hhvm
+        - php: nightly
 
 install:
     - if [ -z "$deps" ]; then composer install; fi;
