--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "doctrine/inflector":   "~1.1",
         "doctrine/orm":         "~2.4",
         "symfony/filesystem":   "^3.0.2|~2.5",
-        "twig/twig":            "^1.28"
+        "twig/twig":            "^2.0||^1.28"
     },
     "require-dev": {
         "composer/composer":  "^1.0.0",
