--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "doctrine/common":      "~2.4",
         "doctrine/inflector":   "~1.1",
         "doctrine/orm":         "~2.4",
-        "symfony/filesystem":   "^3.0.2|~2.5",
+        "symfony/filesystem":   "^3.0.2|~2.5|^4.0",
         "twig/twig":            "^2.0||^1.28"
     },
     "require-dev": {
