--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: php
 
 matrix:
     include:
-          env: deps=lowest
+        - env: deps=lowest
         - php: 7.1
         - php: 7.2
         - php: nightly
