--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "name":              "hostnet/accessor-generator-plugin-lib",
+    "type":              "composer-plugin",
     "description":       "Generate get, set, add, remove methods on the fly.",
     "license":           "MIT",
-    "type":              "composer-plugin",
+    "minimum-stability": "stable",
     "require": {
         "php":                  ">=7.1",
         "composer-plugin-api":  "^1.0",
@@ -10,21 +11,14 @@
         "doctrine/common":      "~2.4",
         "doctrine/inflector":   "~1.1",
         "doctrine/orm":         "~2.4",
-        "symfony/filesystem":   "^3.0.2|~2.5|^4.0",
-        "twig/twig":            "^2.0||^1.28"
+        "symfony/filesystem":   "^3.3.0||^4.0",
+        "twig/twig":            "^2.0"
     },
     "require-dev": {
         "composer/composer":  "^1.0.0",
-        "hostnet/phpcs-tool": "^4.0.8",
-        "phpunit/phpunit":    "^5.5.0"
+        "hostnet/phpcs-tool": "^5.3.0",
+        "phpunit/phpunit":    "^7.0.0"
     },
-    "minimum-stability": "stable",
-    "authors": [
-        {
-            "name":  "Hidde Boomsma",
-            "email": "hboomsma@hostnet.nl"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "Hostnet\\Component\\AccessorGenerator\\": "src/"
@@ -39,6 +33,9 @@
             "test/annotation_loader.php"
         ]
     },
+    "extra": {
+        "class": "Hostnet\\Component\\AccessorGenerator\\Plugin"
+    },
     "archive": {
         "exclude": [
             "/test",
@@ -47,8 +44,5 @@
             "/phpcs.xml.dist",
             "/cli-config.php"
         ]
-    },
-    "extra": {
-        "class": "Hostnet\\Component\\AccessorGenerator\\Plugin"
     }
 }
