--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/common":      "~2.4",
         "doctrine/inflector":   "~1.1",
         "doctrine/orm":         "~2.4",
-        "symfony/filesystem":   "^3.0.2|~2.5|^4.0",
+        "symfony/filesystem":   "^4.4||^5.0",
         "twig/twig":            "^2.7.1||^3.0"
     },
     "require-dev": {
