--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php":                  ">=7.2",
         "ext-bcmath":           "*",
         "ext-json":             "*",
-        "composer-plugin-api":  "^1.0",
+        "composer-plugin-api":  "^2.0",
         "doctrine/annotations": "~1.2",
         "doctrine/common":      "~2.4",
         "doctrine/inflector":   "~1.1",
@@ -16,9 +16,9 @@
         "twig/twig":            "^2.7.1||^3.0"
     },
     "require-dev": {
-        "composer/composer":  "^1.0.0",
-        "hostnet/phpcs-tool": "^8.2.0",
-        "phpunit/phpunit":    "^8.5.0"
+        "composer/composer":  "^2.0.0",
+        "phpunit/phpunit":    "^8.5.0",
+        "hostnet/phpcs-tool": "^8.3.17"
     },
     "minimum-stability": "stable",
     "authors": [
