--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license":           "MIT",
     "type":              "composer-plugin",
     "require": {
-        "php":                  ">=7.2",
+        "php":                  ">=7.3|>=8.0",
         "ext-bcmath":           "*",
         "ext-json":             "*",
         "composer-plugin-api":  "^2.0",
