--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "ext-json":             "*",
         "doctrine/annotations": "~1.2",
         "doctrine/common":      "~2.4",
-        "doctrine/inflector":   "~1.1",
+        "doctrine/inflector":   "^1.4.4|^2.0",
         "doctrine/orm":         "~2.4",
         "symfony/filesystem":   "^4.4||^5.0",
         "twig/twig":            "^2.7.1||^3.0"
