Add required 'type' attribute, which used to default to string; set useful defaults

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "ext-bcmath":           "*",
         "ext-json":             "*",
         "doctrine/annotations": "~1.2",
-        "doctrine/common":      "~2.4",
+        "doctrine/collections": "^1.6",
+        "doctrine/dbal":        "^2.0",
         "doctrine/inflector":   "^1.4.4|^2.0",
         "doctrine/orm":         "~2.4",
         "symfony/filesystem":   "^4.4||^5.0",
