--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         "composer-plugin-api":  "^2.0",
         "ext-bcmath":           "*",
         "ext-json":             "*",
-        "doctrine/annotations": "~1.2",
+        "doctrine/annotations": "^1.11.1",
         "doctrine/collections": "^1.6",
-        "doctrine/dbal":        "^2.0",
+        "doctrine/dbal":        "^2.13.2||^3.0.0",
         "doctrine/inflector":   "^1.4.4|^2.0",
         "doctrine/orm":         "~2.4",
         "symfony/filesystem":   "^4.4||^5.0",
-        "twig/twig":            "^2.7.1||^3.0"
+        "twig/twig":            "^2.14.1||^3.0"
     },
     "require-dev": {
         "composer/composer":  "^2.0.0",
