Add prophecy as dev requirement

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require-dev": {
         "composer/composer":  "^2.0.0",
         "hostnet/phpcs-tool": "^9.0.0",
+        "phpspec/prophecy":   "^1.17",
         "phpunit/phpunit":    "^8.5.0"
     },
     "conflict": {
