--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license":           "MIT",
     "minimum-stability": "stable",
     "require": {
-        "php":                  "^7.3|^8.0",
+        "php":                  "^8.0",
         "composer-plugin-api":  "^2.0",
         "ext-bcmath":           "*",
         "ext-json":             "*",
