--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/7.2/phpunit.xsd"
-    colors="true" bootstrap="vendor/autoload.php">
-    <testsuites>
-        <testsuite name="tests">
-            <directory>test</directory>
-        </testsuite>
-    </testsuites>
-    <filter>
-        <whitelist>
-            <directory>src</directory>
-            <directory>test/Generator/fixtures/expected/</directory>
-        </whitelist>
-    </filter>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd" colors="true" bootstrap="vendor/autoload.php">
+  <coverage>
+    <include>
+      <directory>src</directory>
+      <directory>test/Generator/fixtures/expected/</directory>
+    </include>
+  </coverage>
+  <testsuites>
+    <testsuite name="tests">
+      <directory>test</directory>
+    </testsuite>
+  </testsuites>
 </phpunit>
