--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
         "twig/twig":            "^3.4.3"
     },
     "require-dev": {
-        "composer/composer":  "^2.0.0",
-        "hostnet/phpcs-tool": "^9.0.0",
-        "phpspec/prophecy":   "^1.17",
-        "phpunit/phpunit":    "^9.6.0"
+        "composer/composer":        "^2.0.0",
+        "hostnet/phpcs-tool":       "^9.0.0",
+        "phpspec/prophecy":         "^1.17",
+        "phpspec/prophecy-phpunit": "^2.1",
+        "phpunit/phpunit":          "^9.6.0"
     },
     "autoload": {
         "psr-4": {
