--- a/composer.json
+++ b/composer.json
@@ -5,26 +5,24 @@
     "license":           "MIT",
     "minimum-stability": "stable",
     "require": {
-        "php":                  "^8.0",
+        "php":                  "^8.1",
         "composer-plugin-api":  "^2.0",
         "ext-bcmath":           "*",
         "ext-json":             "*",
-        "doctrine/annotations": "^1.11.1",
-        "doctrine/collections": "^1.6",
-        "doctrine/dbal":        "^2.13.2||^3.0.0",
-        "doctrine/inflector":   "^1.4.4|^2.0",
-        "doctrine/orm":         "~2.4",
-        "symfony/filesystem":   "^4.4||^5.0",
-        "twig/twig":            "^2.14.1||^3.0"
+        "doctrine/annotations": "^1.14.3",
+        "doctrine/collections": "^1.8.0",
+        "doctrine/dbal":        "^3.7.2",
+        "doctrine/inflector":   "^2.0.8",
+        "doctrine/orm":         "^2.17.2",
+        "symfony/filesystem":   "^5.4",
+        "twig/twig":            "^3.4.3"
     },
     "require-dev": {
-        "composer/composer":  "^2.0.0",
-        "hostnet/phpcs-tool": "^9.0.0",
-        "phpspec/prophecy":   "^1.17",
-        "phpunit/phpunit":    "^8.5.0"
-    },
-    "conflict": {
-        "doctrine/orm": "2.9.0|2.9.1"
+        "composer/composer":        "^2.0.0",
+        "hostnet/phpcs-tool":       "^9.0.0",
+        "phpspec/prophecy":         "^1.17",
+        "phpspec/prophecy-phpunit": "^2.1",
+        "phpunit/phpunit":          "^9.6.0"
     },
     "autoload": {
         "psr-4": {
