--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "doctrine/dbal":        "^3.7.2",
         "doctrine/inflector":   "^2.0.8",
         "doctrine/orm":         "^2.17.2",
-        "symfony/filesystem":   "^5.4",
+        "symfony/filesystem":   "^5.4||^6.0",
         "twig/twig":            "^3.4.3"
     },
     "require-dev": {
