--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "doctrine/dbal":        "^3.7.2",
         "doctrine/inflector":   "^2.0.8",
         "doctrine/orm":         "^2.17.2",
-        "symfony/filesystem":   "^5.4",
+        "symfony/filesystem":   "^5.4||^6.0",
         "twig/twig":            "^3.4.3"
     },
     "require-dev": {
@@ -23,6 +23,9 @@
         "phpspec/prophecy":         "^1.17",
         "phpspec/prophecy-phpunit": "^2.1",
         "phpunit/phpunit":          "^9.6.0"
+    },
+    "conflict": {
+        "twig/twig": "^3.9.0"
     },
     "autoload": {
         "psr-4": {
