--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "doctrine/inflector":   "^2.0.8",
         "doctrine/orm":         "^2.17.2",
         "symfony/filesystem":   "^5.4||^6.0",
-        "twig/twig":            "^3.4.3"
+        "twig/twig":            "3.9.3"
     },
     "require-dev": {
         "composer/composer":        "^2.0.0",
@@ -23,9 +23,6 @@
         "phpspec/prophecy":         "^1.17",
         "phpspec/prophecy-phpunit": "^2.1",
         "phpunit/phpunit":          "^9.6.0"
-    },
-    "conflict": {
-        "twig/twig": "^3.9.0"
     },
     "autoload": {
         "psr-4": {
